Corrected social icons display on mobile menu

--- a/themes/rosenberg-foundation/css/global/navigation.scss
+++ b/themes/rosenberg-foundation/css/global/navigation.scss
@@ -90,7 +90,7 @@
 
         .menu__mobile__link {
             padding: 17px 0;
-            margin-bottom: 0;
+            margin-bottom: 16px;
             position: relative;
             display: inline-block;
             color: $bright;
@@ -98,6 +98,7 @@
             font-family: $alt-family, sans-serif;
             font-size: 16px;
             line-height: 24px;
+            text-transform: uppercase;
         }
     }
 
